* Made all exceptions serializable, removing dependencies on internal transient arguments such as Flow, State, and Transition 
  in favor of serializable artifact identifiers such as the flowId and stateId.
  
Package org.springframework.webflow.action
* Renamed FormAction.VALIDATOR_METHOD_PROPERTY to VALIDATOR_METHOD_ATTRIBUTE for consistency with other
  context attributes.

Package org.springframework.webflow.builder
* Reapplied 1.0 rc2 fix for inline flow parsing, which was lost in SourceForge CVS issues occurring between 7/5/06 and 15/5/06

Package org.springframework.webflow.execution
* Renamed ConversationService.begin to "beginConversation".
* Removed implicit unlock call in LocalConversationService.removeFlowExecution
* Made ConversationServiceException extend NestedRuntimeException, since it is a distinct subsystem root exception.
* Added FlowExecutionRestorationException.
* Added BadlyFormattedFlowExecutionKeyException.
* NoSuchConversationException now triggers a NoSuchFlowExecution exception.
* InvalidContinuationIdException, ContinuationNotFoundException, and ContinuationUnmarshalException 
  now trigger a FlowExecutionRestorationException.
  
Package org.springframework.webflow.samples
* Simplified 'flowLauncher' to take advantage of latest attribute mapping features.
* Simplified 'fileUpload' to take advantage of convenient MultipartFile parameter access support.

Package org.springframework.webflow.registry
* Made NoSuchFlowDefinitionException a standalone exception of the flow registry subsystem.

Package org.springframework.webflow.support
* Fixed bug in FlowRedirectSelector where a NPE was thrown on null redirect expression.
* Removed RedirectType. Classes using it now have a simple boolean redirect flag.

Changes in version 1.0 RC2 (09.6.2006)
------------------------------------

Overall
* Moved project source control (with history preserved) to sourceforge subversion (SVN) repository at: