@@ -24,6 +24,8 @@ Package org.springframework.webflow
 Package org.springframework.webflow.action
 * Renamed FormAction.VALIDATOR_METHOD_PROPERTY to VALIDATOR_METHOD_ATTRIBUTE for consistency with other
   context attributes.
+* Removed FormAction.validateUsingValidatorMethod property. If you don't want validation, don't call bindAndValidate()
+  or validate() but just bind().
 
 Package org.springframework.webflow.builder
 * Reapplied 1.0 rc2 fix for inline flow parsing, which was lost in SourceForge CVS issues occurring between 7/5/06 and 15/5/06
